momento/src/commands/capacity_pool/snapshots/display_capacity_pool_with_no_current_values_in_managed_mode.snap
---
source: momento/src/commands/capacity_pool/display.rs
expression: response.to_string()
---
Name: hello world
Status: creating
Managed Provisioning:
- Capacity: 32..128 GiB
- Replicas: 1..2 per shard
- Availability Zones: use1-az1, use1-az2
Diagnostics:
- something_something
  state: active
  message: Something's wrong
- something_else
Additional details:
- answer: 42
