momento/src/commands/capacity_pool/snapshots/display_capacity_pool_with_no_diagnostics.snap
---
source: momento/src/commands/capacity_pool/display.rs
expression: response.to_string()
---
Name: hello world
Status: creating
Cluster Provisioning:
- EC2 Instance Type: r7g.xlarge
- Shard Count: 3
- Replicas: 1 per shard
- Availability Zones: usw2-az1
Metrics Config: disabled
Additional details:
- abc: {
  "X": "x",
  "Y": "y",
  "Z": "z"
}
- hello: "world"
- answer: 42
