momento/src/commands/capacity_pool/snapshots/display_diagnostic_as_raw_json_when_unrecognized.snap
---
source: momento/src/commands/capacity_pool/display.rs
expression: "CapacityPoolDiagnosticEntry::Unparseable(json!({\"answer\": 42})).to_string()"
---
- Unrecognized diagnostic: {
  "answer": 42
}
