momento/src/commands/capacity_pool/snapshots/display_diagnostics_with_both_recognized_and_unrecognized.snap
---
source: momento/src/commands/capacity_pool/display.rs
expression: diagnostics.to_string()
---
- Unrecognized diagnostic: {
  "surprise": 42
}
- stuck
  state: active
